--- a/Intrusion_detection_DT.ipynb
+++ b/Intrusion_detection_DT.ipynb
@@ -2299,9 +2299,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a77606f6-e9d8-40d5-a63d-360120910627",
+   "metadata": {},
+   "source": [
+    "### GitHub Repository:\n",
+    "gh repo command: gh repo clone WayneChK/CSCA_5622\n",
+    "\n",
+    "HTTPs address: https://github.com/WayneChK/CSCA_5622.git"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37b3b236-6f2d-4791-923c-6bc0372c552f",
+   "id": "a4babb00-b1de-4c7f-a716-9d31e1219d4b",
    "metadata": {},
    "outputs": [],
    "source": []
